fix/bag click nav in navigation on mobile, refactor style

--- a/src/components/FormButton/FormButton.module.scss
+++ b/src/components/FormButton/FormButton.module.scss
@@ -10,8 +10,8 @@
   color: $darkPurple;
 
   @media all and (min-width: 360px) and (max-width: 1024px) {
-    height: 10vw;
-    width: 34%;
+    height: 40%;
+    width: 50%;
     font-size: 5vw;
   }
 }
