--- a/src/components/HeaderInfo/headerInfo.module.scss
+++ b/src/components/HeaderInfo/headerInfo.module.scss
@@ -61,7 +61,7 @@
 		@media all and (min-width: 768px) and (max-width: 1024px) {
 			width: 60vw;
 			height: 10.2vh;
-			font-size: 5.1vw;
+			font-size: 34px;
 			margin: 0 auto;
 			background-color: var(--thirdColor);
 			color: var(--secondBg);
