--- a/src/components/LanguageFlags/LanguageFlags.module.scss
+++ b/src/components/LanguageFlags/LanguageFlags.module.scss
@@ -43,12 +43,12 @@
     }
 
     & .ua:first-child {
-      transition: 0.3 opacity;
+      transition: 0.7 opacity;
       opacity: 0;
     }
 
     & .en:last-child {
-      transition: 0.3 opacity;
+      transition: 0.7 opacity;
       opacity: 0;
     }
 
